# eis-parser

./: Makefile  README.md  pyproject.toml
parser/: main.py  tasks_class.py  tasks_func.py
src/: main.py
